2003-11-09  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions-external/lhii.desc: Added (back) the links to
	  the external lhii backend that supports old handscanners.

-- snapshot 1.0.13-pre2

2003-11-09  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Removed Epson Perfection
	  1670. It's now supported by the snapscan backend.

2003-11-08  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-options.c backend/snapscan-usb.c
	  Fix TPO range for Epson 1670, fix compiler warnings on gcc 3.3

2003-11-08  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-scsi.c backend/snapscan.c doc/descriptions/snapscan.desc:
	  Final bugfixes for Epson 1670

2003-11-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* README.openbsd: Added info about setting permissions (Bug #300311).
	* doc/descriptions/unsupported.desc: Added Genius and Lexmark scanners.

2003-11-07  Oliver Schirrmeister <oschirr@abm.de>

	* backend/fujitsu.c: Bugfix. If a scanner returned a color image
	  in format rr...r gg.g bb...b the reader process crashed.
	* backend/fujitsu.[ch] Bugfix. The option gamma was enabled for
	  the fi-4120. The result was an 'invalid field in parm list'-error.
	* doc/descriptions/fujitsu.desc: added model "fi-4530C"

2003-11-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Microtek and Visioneer
	  scanners.

2003-11-04  m. allan noah <anoah at pfeiffer dot edu>
	* doc/descriptions/fujitsu.desc: added model "fi-4110EOX2"

2003-11-04  Gerhard Jaeger <gerhard@gjaeger.de>
	* backend/Makefile.in: Linking coolscan now against sanei_thread lib.
	* backend/coolscan.c backend/coolscan.h: Switch backend over to
	  sanei_thread usage, to make it work at least with OS/2.
	* backend/plustek-pp_misc.c backend/plustek-pp_hwdefs.h: Fixed bug
	  in parport setup routine.
	* sanei/sanei_pp.c: Fixed problem in sanei_pp_setmode().